Fix progress bar on mobile.

--- a/src/components/progress-bar/ProgressBar.css
+++ b/src/components/progress-bar/ProgressBar.css
@@ -10,41 +10,47 @@
 	transition: opacity 0.5s ease;
 	z-index: 10;
 	background-color: lightslategray;
-  }
-  
-  .progress-container.hide {
+}
+
+@media screen and (max-width: 630px) {
+	.progress-container {
+		height: 100px;
+	}
+	
+}
+
+.progress-container.hide {
 	opacity: 0;
 	pointer-events: none;
-  }
-  
-  .progress-bar {
+}
+
+.progress-bar {
 	position: relative;
 	width: 100%;
 	height: 6px;
 	background-color: #ccc;
-  }
-  
-  .progress-bar-inner {
+}
+
+.progress-bar-inner {
 	position: absolute;
 	height: 100%;
 	background-color: #DA3;
 	width: 0%;
 	transition: width 0.5s ease;
-  }
-  
-  .upload-progress-bar-inner {
+}
+
+.upload-progress-bar-inner {
 	position: absolute;
 	height: 100%;
 	background-color: #32a89e;
 	width: 0%;
 	transition: width 0.5s ease;
-  }
-  
-  .progress-text {
+}
+
+.progress-text {
 	color: #000;
 	margin-bottom: 10px;
 	margin-top: 10px;
 	font-size: 20px;
 	text-align: left;
-  }
-  
+}
